# esp32-captive-wifi-manager

./: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
examples/Preact/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
examples/Preact/main/: idf_component.yml  main.c
examples/Preact/webpage/: index.html
examples/Preact/webpage/src/: app.css  app.jsx
examples/Preact/webpage/src/pages/: root.jsx
examples/Preact/webpage/src/utilities/: nav.jsx  status.css  status.jsx
examples/full/main/: CMakeLists.txt  Kconfig.projbuild  main.c  ws_server.c  ws_server.h
examples/full/webpage/: .gitignore  index.html  protocol.md
examples/full/webpage/src/: app.jsx
examples/full/webpage/src/pages/: control.jsx  root.jsx  websocket.jsx
examples/full/webpage/src/utilities/: message.css  message.jsx  nav.css  nav.jsx  status.jsx  ws.js
include/: AP.h  Captive.h  Flags.h  Runtime-handlers.h  SD-mgr.h  STA.h  Server-mgr.h  Wifi.h  helpers.h
src/: AP.c  Captive.c  Flags.c  Runtime-handlers.c  SD-mgr.c  STA.c  Server-mgr.c  Wifi.c  captive.html
